# dsfx3d

./: .bazelignore  .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml  tsconfig.json
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
foo/: BUILD.bazel  package.json
